# tryfed

./: Cargo.toml  product.graphql  rustfmt.toml  supergraph.graphql  supergraph.yaml  user.graphql
product/: Cargo.toml
product/src/: main.rs  product.rs  user.rs
user/: Cargo.toml
user/src/: main.rs  user.rs
xtask/: Cargo.toml
