# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tryfed"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
    "user",
    "product"
]

[dependencies]
anyhow = "1.0.58"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = { git="https://github.com/apollographql/router.git", tag="v0.15.1" }
async-trait = "0.1.52"
futures = "0.3.21"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "=0.1.34"
