[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
async-graphql = { version = "4.0.9", features = ["dataloader"] }
async-graphql-actix-web = "4.0.9"
async-trait = "0.1.57"
env_logger = "0.9.0"
futures = "0.3.23"
actix-cors = "0.6.2"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "signal"] }